Fix alignment of event cards

--- a/assets/css/sass/_events.sass
+++ b/assets/css/sass/_events.sass
@@ -2,4 +2,3 @@
   &__grid
     display: flex
     flex-wrap: wrap
-    justify-content: space-between
